# devcontainer-stm32-cubemx-nrf24l01

./: .gitmodules  CMakeLists.txt  Makefile  devcontainer-stm32-cubemx-nrf24l01.ioc
Core/Inc/: nrf24l01.hpp  nrf24l01_config.hpp  nrf24l01_register.hpp  spi_device.hpp  utility.hpp
Core/Src/: main.cpp  nrf24l01.cpp  spi_device.cpp
app/nrf24l01/: CMakeLists.txt  nrf24l01.cpp  nrf24l01.hpp  nrf24l01_config.hpp  nrf24l01_registers.hpp
cmake/stm32cubemx/: CMakeLists.txt
